:art: 탑승하차 리펙토링