@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,6 +35,6 @@ public class RecommendationService {
         return recommendationRepository.findAll()
                 .stream()
                 .filter(r -> r.getStatus().equals(status))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
